# filter

./: README.md  hn.txt  prompt.sh  pyproject.toml  upgrade.sh  uris
src/filter/: main.py
src/filter/clients/: base.py  bedrock.py  openai.py
src/refine/: main.py
src/refine/clients/: bedrock.py  openai.py
test/: uris.txt
